--- a/horse-details.html
+++ b/horse-details.html
@@ -12,7 +12,7 @@
   <!-- Header & Navigation -->
   <header>
     <nav>
-      <div class="logo">HorseFarm</div>
+      <div class="logo">Stajnia OT Salivonchyk</div>
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="horses.html" class="active">Horses</a></li>
