--- a/horses.html
+++ b/horses.html
@@ -12,7 +12,7 @@
   <!-- Header & Navigation -->
   <header>
     <nav>
-      <div class="logo">HorseFarm</div>
+      <div class="logo">Stajnia OT Salivonchyk</div>
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="horses.html" class="active">Horses</a></li>
@@ -73,7 +73,7 @@
     <section class="horse-list">
       <!-- Example horse card -->
       <article class="horse-card" data-age="3" data-races="12" data-wins="4" data-name="Thunderbolt">
-        <img src="https://via.placeholder.com/300x200" alt="Horse Thunderbolt" />
+        <img src="https://firebasestorage.googleapis.com/v0/b/aspro-flowers.appspot.com/o/images%2Fhorses%2FFlux_Schnell_a_majestic_brown_horse_with_a_shiny_coat_and_flow_3.jpeg?alt=media&token=f127a199-1dd6-4bf3-a009-67da6b8bd325" alt="Horse Thunderbolt" />
         <h2>Thunderbolt</h2>
         <p>Age: 3 years</p>
         <p>Races: 12 | Wins: 4</p>
@@ -81,7 +81,7 @@
       </article>
 
       <article class="horse-card" data-age="5" data-races="20" data-wins="7" data-name="Majesty">
-        <img src="https://via.placeholder.com/300x200" alt="Horse Majesty" />
+        <img src="https://firebasestorage.googleapis.com/v0/b/aspro-flowers.appspot.com/o/images%2Fhorses%2FFlux_Schnell_a_majestic_brown_horse_with_a_shiny_coat_and_flow_2.jpeg?alt=media&token=1e2f98ff-4a52-42e5-b422-9ebbcc6ee1c8" alt="Horse Majesty" />
         <h2>Majesty</h2>
         <p>Age: 5 years</p>
         <p>Races: 20 | Wins: 7</p>
@@ -89,7 +89,7 @@
       </article>
 
       <article class="horse-card" data-age="2" data-races="5" data-wins="2" data-name="Lightning">
-        <img src="https://via.placeholder.com/300x200" alt="Horse Lightning" />
+        <img src="https://firebasestorage.googleapis.com/v0/b/aspro-flowers.appspot.com/o/images%2Fhorses%2FFlux_Schnell_a_majestic_brown_horse_with_a_shiny_coat_and_flow_0.jpeg?alt=media&token=5212975f-f1cb-44d7-9dee-cab1ebd1f806" alt="Horse Lightning" />
         <h2>Lightning</h2>
         <p>Age: 2 years</p>
         <p>Races: 5 | Wins: 2</p>
