--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
   <meta charset="UTF-8" />
   <meta name="description" content="Horse breeding and performance activities" />
@@ -12,13 +12,15 @@
   <!-- Header & Navigation -->
   <header>
     <nav>
-      <div class="logo">stajnia OT Salivonchyk</div>
+      <div class="logo">HorseFarm</div>
       <ul>
         <li><a href="index.html" class="active">Home</a></li>
         <li><a href="horses.html">Horses</a></li>
         <li><a href="news.html">News</a></li>
         <li><a href="about.html">About Us</a></li>
         <li><a href="contact.html">Contact Us</a></li>
+        <!-- Добавляем новую ссылку для покупки коней -->
+        <li><a href="purchase.html">Покупка коней</a></li>
       </ul>
     </nav>
   </header>
@@ -72,6 +74,11 @@
         <h3>Contact Us</h3>
         <p>Have questions or want to visit? Get in touch!</p>
         <a href="contact.html" class="btn">Contact</a>
+      </div>
+      <div class="card">
+        <h3>Покупка коней</h3>
+        <p>Присоединяйтесь к со-владению нашими лошадьми.</p>
+        <a href="purchase.html" class="btn">Узнать больше</a>
       </div>
     </div>
   </section>
