--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
         <li><a href="news.html">News</a></li>
         <li><a href="about.html">About Us</a></li>
         <li><a href="contact.html">Contact Us</a></li>
-        <!-- Добавляем новую ссылку для покупки коней -->
+        <!-- Новая ссылка: переход на страницу покупки -->
         <li><a href="purchase.html">Покупка коней</a></li>
+        <!-- Новая ссылка: страница админки -->
+        <li><a href="admin.html">Админка</a></li>
       </ul>
     </nav>
   </header>
@@ -79,6 +81,11 @@
         <h3>Покупка коней</h3>
         <p>Присоединяйтесь к со-владению нашими лошадьми.</p>
         <a href="purchase.html" class="btn">Узнать больше</a>
+      </div>
+      <div class="card">
+        <h3>Админка</h3>
+        <p>Управляйте лошадьми и следите за покупателями.</p>
+        <a href="admin.html" class="btn">Перейти</a>
       </div>
     </div>
   </section>
