--- a/horses.html
+++ b/horses.html
@@ -2,109 +2,66 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="description" content="List of our horses" />
+  <meta name="description" content="List of horses for sale" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Horse Farm - Horses</title>
+  <title>Horse Farm - Horses for Sale</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-
-  <!-- Header & Navigation -->
   <header>
     <nav>
-      <div class="logo">Stajnia OT Salivonchyk</div>
+      <div class="logo">HorseFarm</div>
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="horses.html" class="active">Horses</a></li>
         <li><a href="news.html">News</a></li>
         <li><a href="about.html">About Us</a></li>
         <li><a href="contact.html">Contact Us</a></li>
+        <li><a href="purchase.html">Покупка коней</a></li>
       </ul>
     </nav>
   </header>
-
+  
   <main>
-    <!-- Filters Section -->
-    <section class="horse-filters">
-      <h1>Our Horses</h1>
-      <div class="filters">
-        <div>
-          <label for="filter-age">Filter by Age:</label>
-          <select id="filter-age">
-            <option value="all">All Ages</option>
-            <option value="1-3">1-3 years</option>
-            <option value="3-5">3-5 years</option>
-          </select>
-        </div>
-
-        <div>
-          <label for="filter-races">Filter by Races:</label>
-          <select id="filter-races">
-            <option value="all">All</option>
-            <option value="0-10">0-10 races</option>
-            <option value="10-20">10-20 races</option>
-            <option value="20plus">20+ races</option>
-          </select>
-        </div>
-
-        <div>
-          <label for="filter-wins">Filter by Wins:</label>
-          <select id="filter-wins">
-            <option value="all">All</option>
-            <option value="0-5">0-5 wins</option>
-            <option value="5-10">5-10 wins</option>
-            <option value="10plus">10+ wins</option>
-          </select>
-        </div>
-
-        <div>
-          <label for="sort-horses">Sort by:</label>
-          <select id="sort-horses">
-            <option value="name">Name (A-Z)</option>
-            <option value="age">Age</option>
-            <option value="races">Number of Races</option>
-            <option value="wins">Number of Wins</option>
-          </select>
-        </div>
-      </div>
-    </section>
-
-    <!-- Horses List -->
-    <section class="horse-list">
-      <!-- Example horse card -->
-      <article class="horse-card" data-age="3" data-races="12" data-wins="4" data-name="Thunderbolt">
-        <img src="https://firebasestorage.googleapis.com/v0/b/aspro-flowers.appspot.com/o/images%2Fhorses%2FFlux_Schnell_a_majestic_brown_horse_with_a_shiny_coat_and_flow_3.jpeg?alt=media&token=f127a199-1dd6-4bf3-a009-67da6b8bd325" alt="Horse Thunderbolt" />
-        <h2>Thunderbolt</h2>
-        <p>Age: 3 years</p>
-        <p>Races: 12 | Wins: 4</p>
-        <a href="horse-details.html">View Details</a>
-      </article>
-
-      <article class="horse-card" data-age="5" data-races="20" data-wins="7" data-name="Majesty">
-        <img src="https://firebasestorage.googleapis.com/v0/b/aspro-flowers.appspot.com/o/images%2Fhorses%2FFlux_Schnell_a_majestic_brown_horse_with_a_shiny_coat_and_flow_2.jpeg?alt=media&token=1e2f98ff-4a52-42e5-b422-9ebbcc6ee1c8" alt="Horse Majesty" />
-        <h2>Majesty</h2>
-        <p>Age: 5 years</p>
-        <p>Races: 20 | Wins: 7</p>
-        <a href="horse-details.html">View Details</a>
-      </article>
-
-      <article class="horse-card" data-age="2" data-races="5" data-wins="2" data-name="Lightning">
-        <img src="https://firebasestorage.googleapis.com/v0/b/aspro-flowers.appspot.com/o/images%2Fhorses%2FFlux_Schnell_a_majestic_brown_horse_with_a_shiny_coat_and_flow_0.jpeg?alt=media&token=5212975f-f1cb-44d7-9dee-cab1ebd1f806" alt="Horse Lightning" />
-        <h2>Lightning</h2>
-        <p>Age: 2 years</p>
-        <p>Races: 5 | Wins: 2</p>
-        <a href="horse-details.html">View Details</a>
-      </article>
-      
-      <!-- Add more horse cards as needed -->
-    </section>
+    <h1>Лошади, выставленные на продажу</h1>
+    <div id="horses-container">
+      <!-- Horse cards will be dynamically generated here -->
+    </div>
   </main>
 
-  <!-- Footer -->
   <footer>
     <p>&copy; 2025 HorseFarm. All rights reserved.</p>
   </footer>
 
-  <script src="scripts.js"></script>
+  <script>
+    // Fetch horses with status FOR_BUY from the backend API
+    fetch('http://localhost:8090/api/horses/for-buy')
+      .then(response => response.json())
+      .then(horses => {
+        const container = document.getElementById('horses-container');
+        horses.forEach(horse => {
+          const card = document.createElement('div');
+          card.classList.add('horse-card');
+          card.innerHTML = `
+            <h2>${horse.name}</h2>
+            <p>Год рождения: ${horse.yearOfBirth}</p>
+            <p>Порода: ${horse.breed}</p>
+            <p>Описание: ${horse.description}</p>
+            <p>Цена: $${horse.price}</p>
+            <p>Статус: ${horse.status}</p>
+            <button onclick="buyHorse(${horse.id})">Купить часть лошади</button>
+          `;
+          container.appendChild(card);
+        });
+      })
+      .catch(err => console.error(err));
+
+    // Example function for buying a horse (opens a modal, etc.)
+    function buyHorse(horseId) {
+      // Open a modal to input buyer details and then call the /api/horses/{id}/buy endpoint
+      // (Implementation similar to the previous purchase.js code.)
+      alert('Здесь будет модальное окно для покупки. Horse ID: ' + horseId);
+    }
+  </script>
 </body>
 </html>
