--- a/news.html
+++ b/news.html
@@ -6,22 +6,32 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Horse Farm - News</title>
   <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="css/header.css" />
 </head>
 <body>
 
   <!-- Header & Navigation -->
-  <header>
+<header>
+  <div class="header-container">
+    <!-- Logo -->
+    <div class="logo">
+      <a href="index.html">HorseFarm</a>
+    </div>
+    <!-- Navigation -->
     <nav>
-      <div class="logo">Stajnia OT Salivonchyk</div>
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="horses.html">Horses</a></li>
-        <li><a href="news.html" class="active">News</a></li>
+        <li><a href="news.html">News</a></li>
         <li><a href="about.html">About Us</a></li>
         <li><a href="contact.html">Contact Us</a></li>
+        <li><a href="purchase.html">Purchase horses</a></li>
+        <li><a href="admin.html">Admin</a></li>
+        <li><a href="login.html">LogIn/LogOut</a></li>
       </ul>
     </nav>
-  </header>
+  </div>
+</header>
 
   <main>
     <section>
