--- a/about.html
+++ b/about.html
@@ -6,21 +6,31 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Horse Farm - About Us</title>
   <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="css/header.css" />
 </head>
 <body>
 
   <!-- Header & Navigation -->
   <header>
-    <nav>
-      <div class="logo">Stajnia OT Salivonchyk</div>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="horses.html">Horses</a></li>
-        <li><a href="news.html">News</a></li>
-        <li><a href="about.html" class="active">About Us</a></li>
-        <li><a href="contact.html">Contact Us</a></li>
-      </ul>
-    </nav>
+    <div class="header-container">
+      <!-- Logo -->
+      <div class="logo">
+        <a href="index.html">HorseFarm</a>
+      </div>
+      <!-- Navigation -->
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="horses.html">Horses</a></li>
+          <li><a href="news.html">News</a></li>
+          <li><a href="about.html">About Us</a></li>
+          <li><a href="contact.html">Contact Us</a></li>
+          <li><a href="purchase.html">Purchase horses</a></li>
+          <li><a href="admin.html">Admin</a></li>
+          <li><a href="login.html">LogIn/LogOut</a></li>
+        </ul>
+      </nav>
+    </div>
   </header>
 
   <main>
