--- a/login.html
+++ b/login.html
@@ -1,46 +1,156 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login - HorseFarm</title>
-  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js"></script>
+  <title>LogIn - HorseFarm</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f9f9f9;
+      margin: 0;
+      padding: 20px;
+      text-align: center;
+    }
+    .container {
+      max-width: 400px;
+      margin: 20px auto;
+      background: #fff;
+      padding: 20px;
+      border-radius: 8px;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    }
+    input {
+      display: block;
+      width: 90%;
+      padding: 10px;
+      margin: 10px auto;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+    }
+    button {
+      padding: 10px 20px;
+      background: #333;
+      color: #fff;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+    button:hover {
+      background: #444;
+    }
+  </style>
+  <!-- Use Firebase compat libraries for easier migration -->
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth-compat.js"></script>
+  
+  <link rel="stylesheet" href="css/header.css" />
 </head>
 <body>
-  <h1>Вход</h1>
-  <form id="login-form">
-    <input type="email" id="email" placeholder="Email" required><br>
-    <input type="password" id="password" placeholder="Password" required><br>
-    <button type="submit">Войти</button>
-  </form>
+  <header>
+    <div class="header-container">
+      <!-- Logo -->
+      <div class="logo">
+        <a href="index.html">HorseFarm</a>
+      </div>
+      <!-- Navigation -->
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="horses.html">Horses</a></li>
+          <li><a href="news.html">News</a></li>
+          <li><a href="about.html">About Us</a></li>
+          <li><a href="contact.html">Contact Us</a></li>
+          <li><a href="purchase.html">Purchase horses</a></li>
+          <li><a href="admin.html">Admin</a></li>
+          <li><a href="login.html">LogIn/LogOut</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+  <div id="content" class="container">
+    <!-- Content will be injected here -->
+  </div>
 
   <script>
-    // TODO: Replace with your Firebase project configuration
+    // Firebase configuration (provided)
     const firebaseConfig = {
-  apiKey: "AIzaSyC2ey17cxMeFk9Qhv-a99qyawHZ0xP32_4",
-  authDomain: "anna-1996.firebaseapp.com",
-  projectId: "anna-1996",
-  storageBucket: "anna-1996.appspot.com",
-  messagingSenderId: "957521875132",
-  appId: "1:957521875132:web:77f46d802bfacc24a680b9",
-  measurementId: "G-S8FN10S8L1"
-};
+      apiKey: "AIzaSyC2ey17cxMeFk9Qhv-a99qyawHZ0xP32_4",
+      authDomain: "anna-1996.firebaseapp.com",
+      projectId: "anna-1996",
+      storageBucket: "anna-1996.appspot.com",
+      messagingSenderId: "957521875132",
+      appId: "1:957521875132:web:77f46d802bfacc24a680b9",
+      measurementId: "G-S8FN10S8L1"
+    };
 
+    // Initialize Firebase using compat libraries
     firebase.initializeApp(firebaseConfig);
     const auth = firebase.auth();
 
-    document.getElementById('login-form').addEventListener('submit', e => {
-      e.preventDefault();
-      const email = document.getElementById('email').value;
-      const password = document.getElementById('password').value;
-      auth.signInWithEmailAndPassword(email, password)
-        .then(userCredential => {
-          alert("Вход выполнен успешно!");
-        })
-        .catch(error => {
-          alert(error.message);
+    const contentDiv = document.getElementById("content");
+
+    // Listen for authentication state changes
+    auth.onAuthStateChanged(user => {
+      if (user) {
+        // User is logged in: display greeting with email and a logout button.
+        contentDiv.innerHTML = `
+          <h2>Hello, ${user.email}!</h2>
+          <p>You are already logged in.</p>
+          <button id="logoutButton">Log Out</button>
+        `;
+        document.getElementById("logoutButton").addEventListener("click", () => {
+          auth.signOut().then(() => {
+            location.reload();
+          }).catch(err => console.error("Sign out error:", err));
         });
+      } else {
+        // No user is logged in: display a message and the login & registration forms.
+        contentDiv.innerHTML = `
+          <h2>You need to Log in</h2>
+          <form id="loginForm">
+            <input type="email" id="loginEmail" placeholder="Email" required>
+            <input type="password" id="loginPassword" placeholder="Password" required>
+            <button type="submit">Log In</button>
+          </form>
+          <p>Don't have an account? Register below:</p>
+          <form id="registerForm">
+            <input type="email" id="registerEmail" placeholder="Email" required>
+            <input type="password" id="registerPassword" placeholder="Password" required>
+            <button type="submit">Register</button>
+          </form>
+        `;
+
+        // Handle login form submission
+        document.getElementById("loginForm").addEventListener("submit", function(e) {
+          e.preventDefault();
+          const email = document.getElementById("loginEmail").value;
+          const password = document.getElementById("loginPassword").value;
+          auth.signInWithEmailAndPassword(email, password)
+            .then(() => {
+              alert("Login successful!");
+              window.location.href = "profile.html"; // Redirect to profile page
+            })
+            .catch(error => {
+              alert(error.message);
+            });
+        });
+
+        // Handle registration form submission
+        document.getElementById("registerForm").addEventListener("submit", function(e) {
+          e.preventDefault();
+          const email = document.getElementById("registerEmail").value;
+          const password = document.getElementById("registerPassword").value;
+          auth.createUserWithEmailAndPassword(email, password)
+            .then(() => {
+              alert("Registration successful! You are now logged in.");
+              window.location.href = "profile.html"; // Redirect to profile page
+            })
+            .catch(error => {
+              alert(error.message);
+            });
+        });
+      }
     });
   </script>
 </body>
